--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>My profile</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css"
     href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,20 +23,8 @@
         hiking near my home town in Iceland
         and reading!
       </p>
-      <a href="https://i.imgur.com/9IWokeZ.jpeg" target="_blank">Here's my twitter!</a>
-      <p> I'm much funnier in my own language so If you don't speak
-        icelandic you won't understand any of my tweets</p>
+      <a href="https://twitter.com/BirtaHei" target="_blank">Here's my twitter!</a>
 
-    </div>
-
-    <div class="card">
-      <h2>
-        Code!
-      </h2>
-      <img id ="code-pic" src="https://i.imgur.com/qwsekrC.jpeg">
-      <p>
-        I am passionate about <strong>Learning how to code</strong>.
-      </p>
     </div>
 
     <div class="card">
